--- a/ios/firebase_app_id_file.json
+++ b/ios/firebase_app_id_file.json
@@ -1,7 +1,7 @@
 {
   "file_generated_by": "FlutterFire CLI",
   "purpose": "FirebaseAppID & ProjectID for this Firebase app in this directory",
-  "GOOGLE_APP_ID": "1:267444703808:ios:ed8efb31e63d0dfc59c5a5",
-  "FIREBASE_PROJECT_ID": "todo-app-fddd8",
-  "GCM_SENDER_ID": "267444703808"
+  "GOOGLE_APP_ID": "1:298747865626:ios:8e2e2ec195091678fa3fa3",
+  "FIREBASE_PROJECT_ID": "todo-87b43",
+  "GCM_SENDER_ID": "298747865626"
 }
