--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^1.21.0
   cloud_firestore: ^3.4.5
+  provider: ^6.0.3
 
 dev_dependencies:
   flutter_test:
