--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,11 @@ dependencies:
   firebase_core: ^1.21.0
   cloud_firestore: ^3.4.5
   provider: ^6.0.3
+  intl: ^0.17.0
+  shared_preferences: ^2.0.15
+  flutter_localizations: # Add this line
+    sdk: flutter
+
 
 dev_dependencies:
   flutter_test:
@@ -63,8 +68,11 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+  generate: true
+
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/images/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
